@@ -7,6 +7,7 @@
 * Fix - Store Stripe customer for test and live mode.
 * Fix - Display Payments menu in the sidebar if there's a problem connecting to the server.
 * Add - Display fee structure in transaction timelines.
+* Add - Use site username for recording ToS acceptance.
 
 = 1.7.1 - 2020-12-03 =
 * Fix - Pass ISO strings instead of Moment objects to dateI18n.
